Fixed small screen layout problem.

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -56,7 +56,6 @@
 }
 #bigN {
     color: green;
-    margin-left: var(--leftmargin);
     margin-right: 15px;
     text-align: center;
     padding-top: 2px;
@@ -122,7 +121,7 @@
 }
 
 .main-tile {
-    height: 40px;
+  height: 40px;
   width: 40px;
   border-radius: 8px;
   border: 2px solid black;
@@ -456,8 +455,7 @@ ul {
     font-size: 20px;
 }
 #bigN {
-    margin-left: 5px;
-    margin-right: 5px;
+    margin-right: 8px;
     font-size: 20px;
 }
 
@@ -586,6 +584,6 @@ ul {
     max-width: 150px;
     height: 150px;
     margin: auto;
-    margin-top: 120px;
+    margin-top: 140px;
 }
 }
